--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,21 +1,60 @@
 body {width: 100%;
-    height: 94%;}
+    height:100%;
+color: #fff;
+    font-family: 'Lora', serif;
+}
+
+a {color: #ccc;}
+a:hover {color: #fff;}
 
 section {
-    width: 96%;
-    height: 98%;
-    margin: 2%;
-    outline: 10px solid blue;
+    width: 100%;
+    height: 100%;
+    /*margin: 2%;*/
+    /*outline: 10px solid blue;*/
     /*background-image: url('../img/cher.jpg');*/
     /*background-repeat: no-repeat;*/
     /*background-position: top right;*/
 }
 
+.main1  {       width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;  }
+
+
+.bgvid {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+}
+
+@media (min-aspect-ratio: 16/9) {
+    .bgvid  { height: 300%; top: -100%; }
+}
+@media (max-aspect-ratio: 16/9) {
+    .bgvid  { width: 300%; left: -100%; }
+}
+/* Если есть поддержка object-fit (Chrome/Chrome для Android, Safari в iOS 8 и Opera), используем его: */
+@supports (object-fit: cover) {
+    .bgvid  {
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        object-fit: cover;
+    }
+}
+
+
 h1 {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Lora', serif;
     text-align: center;
-    text-transform: uppercase;
-    font-size: 48px;
+    font-size: 72px;
+    /*margin: 0;*/
+    color: #fff;
+    font-weight: 700;
 }
 
 .counters { opacity: 0;  }
@@ -71,11 +110,136 @@ opacity: 1;
 
 
 
+input {
+    color: #ccc;
+}
+
+input:focus {
+    color: #000;
+}
 
 
-input[value="http://vpomoshchmanage.ru/"]
-{color: #ccc;}
-
-input {color: #000; }
 
 
+
+
+
+.md-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 50%;
+    max-width: 630px;
+    min-width: 320px;
+    height: auto;
+    z-index: 2000;
+    visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.md-show {
+    visibility: visible;
+}
+
+.md-overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    opacity: 0;
+    background: rgba(0,0,100,0.8);
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.md-show ~ .md-overlay {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* Content styles */
+.md-content {
+    color: #fff;
+    background: #0075db;
+    position: relative;
+    border-radius: 3px;
+    margin: 0 auto;
+}
+
+.md-content h3 {
+    margin: 0;
+    padding: 0.4em;
+    text-align: center;
+    font-size: 2.4em;
+    opacity: 1;
+    background: rgba(0,0,0,0.1);
+    border-radius: 3px 3px 0 0;
+    color: white;
+    font-family: 'Lora', serif;
+}
+
+.md-content > div {
+    padding: 15px 40px 30px;
+    margin: 0;
+    opacity: 1;
+    font-size: 1.15em;
+}
+
+.md-content > div p {
+    margin: 0;
+    padding: 10px 0;
+    font-family: 'Lora', serif;
+}
+
+.md-content > div ul {
+    margin: 0;
+    padding: 0 0 30px 20px;
+}
+
+.md-content > div ul li {
+    padding: 5px 0;
+}
+
+.md-content button {
+    display: block;
+    margin: 0 auto;
+    font-size: 0.8em;
+}
+
+.md-content .button:hover, .md-content .button:focus {
+    background-color: blue;
+}
+
+.md-content .button:active {
+    background-color: darkviolet;
+}
+
+
+.md-effect-1 .md-content {
+    -webkit-transform: scale(0.7);
+    -moz-transform: scale(0.7);
+    -ms-transform: scale(0.7);
+    transform: scale(0.7);
+    opacity: 0;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.md-show.md-effect-1 .md-content {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+}
